password hide/visible bug fix

--- a/login.css
+++ b/login.css
@@ -154,7 +154,7 @@ input[type=text] {
     position: absolute;
     width: 42px;
     height: 48px;
-    right: -32px;
+    right: 14px;
     top: 1px;
     cursor: pointer;
 }
